form submit implementado com sucesso

--- a/contato.html
+++ b/contato.html
@@ -39,7 +39,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
-    <link rel="manifest" href="assets/json/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     <!-- LINK ICONES -->
@@ -56,24 +55,24 @@
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="# "><img id="logo-person" src="./assets/img/logo.png " alt="Logo MDM "></a>
+                <a class="navbar-brand" href="./"><img id="logo-person" src="./assets/img/logo.png " alt="Logo MDM "></a>
                 <i class="bi bi-list navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarmenu"></i>
                 <div class="collapse navbar-collapse" id="navbarmenu">
                     <ul class="navbar-nav ms-auto px-3">
                         <li class="nav-item mb-3">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="./">Home</a>
                         </li>
                         <li class="nav-item mb-3">
-                            <a class="nav-link " href="servicos.html">Serviços</a>
+                            <a class="nav-link " href="servicos">Serviços</a>
                         </li>
                         <li class="nav-item mb-3">
-                            <a class="nav-link " href="produtos.html">Produtos</a>
+                            <a class="nav-link " href="produtos">Produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sobre.html">Sobre</a>
+                            <a class="nav-link" href="sobre">Sobre</a>
                         </li>
                     </ul>
-                    <a class="btn-secondary-c" href="contato.html">Contato</a>
+                    <a class="btn-secondary-c" href="contato">Contato</a>
                 </div>
             </div>
         </nav>
@@ -107,7 +106,7 @@
                             <i class="bi bi-whatsapp"></i>&nbsp;<span> (11) 96258-4708</span>
                         </p>
                     </a>
-                    <a href="contato.html">
+                    <a href="mailto:dmdmembranas@gmail.com" target="_blank">
                         <p class="text-primary w-100 links-contato">
                             <i class="bi bi-envelope email"></i><span>&nbsp; dmdmembranas@gmail.com</span>
                         </p>
@@ -117,27 +116,32 @@
                     </p>
 
                     <p class="text-danger mb-3 c-obrigatorios w-100">
-                        Os campos com * são obrigatorios, para o envio do formulário.
+                        Os campos com * são obrigatorios para o envio do formulário. Ao enviá-lo, você receberá um email confirmando o envio.
                     </p>
 
                 </div>
                 <div class="col-md-6 mt-3">
-                    <form class="row g-3 formulario p-3">
-                        <div class="col-12 mt-4">
-                            <input type="text" class="form-control" placeholder="Nome Completo *" id="validationDefault01" required>
+                    <form class="row g-3 formulario p-3" action="https://formsubmit.co/4a1fa2697b028d75d1fa20eb380279e5" method="POST">
+                        <input type="hidden" name="_next" value="https://dmdmembranas.com.br/contato">
+                        <div class="col-12 mt-4 text-start">
+                            <label for="name" class="text-primary">Nome completo* :</label>
+                            <input type="text" class="form-control" name="nome" id="name" maxlength="50" minlength="3" required>
                         </div>
-                        <div class="col-12">
-                            <input type="text" class="form-control" placeholder="Nome da Empresa   (Opcional)">
+                        <div class="col-12 text-start text-primary">
+                            <label for="empresa">Nome da Empresa :</label>
+                            <input type="text" class="form-control" name="empresa" id="empresa" maxlength="50" minlength="3" placeholder="Opcional">
                         </div>
-
-                        <div class="col-12">
-                            <input type="tel" class="form-control" placeholder="Telefône (DDD) *" required>
+                        <div class="col-12 text-start text-primary">
+                            <label for="tel">Telefône* :</label>
+                            <input type="tel" class="form-control" name="telefone" id="tel" placeholder="(DDD)" maxlength="11" minlength="10" required>
                         </div>
-                        <div class="col-12">
-                            <input type="text" class="form-control" placeholder="Email *" required>
+                        <div class="col-12 text-start text-primary">
+                            <label for="email">Email* :</label>
+                            <input type="email" class="form-control" name="email" id="email" required>
                         </div>
-                        <div class="col-12">
-                            <textarea name="" id="" cols="20" rows="4" class="p-3 w-100"></textarea>
+                        <div class="col-12 text-start text-primary">
+                            <label for="menssage">Menssagem :</label>
+                            <textarea name="mensagem" id="menssage" cols="20" rows="4" class="p-3 w-100" required></textarea>
                         </div>
                         <div class="d-grid gap-2 col-lg-6 col-md-12 mx-auto mb-lg-4 mb-md-3">
                             <button class="btn btn-primary border-0 p-2 submit" type="submit">Enviar &nbsp;<i class="bi bi-send-fill"></i></button>
@@ -145,6 +149,8 @@
                         <div class="d-grid gap-2 col-lg-6 col-md-12  mx-auto mb-4">
                             <button class="btn btn-danger border-0 p-2" type="reset">Limpar &nbsp;<i class="bi bi-x-circle-fill"></i></button>
                         </div>
+                        <input type="hidden" name="_autoresponse" value="Recebemos sua mensagem, Nós da DMD membranas agradecemos pelo seu contato e logo responderemos.">
+                        <input type="hidden" name="_captcha" value="false">
                     </form>
                 </div>
             </div>
@@ -167,7 +173,7 @@
         <div class="container text-center text-md-left ">
             <div class="row text-center text-md-left ">
                 <div class="col-md-12 col-lg-3 col-xl-3 mx-auto mt-lg-5 mb-5 ">
-                    <a href="# ">
+                    <a href="./">
                         <img src="./assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
                     </a>
                 </div>
@@ -178,23 +184,23 @@
                 <div class="col-md-12 col-lg-3 col-xl-3 mx-auto mt-3 text-start ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Produtos</h5>
                     <p>
-                        <a class="text-white " href="produtos.html ">Teclados de Membrana</a>
+                        <a class="text-white" href="produtos">Teclados de Membrana</a>
                     </p>
                     <p>
-                        <a class="text-white " href="produtos.html ">Paineis Frontais</a>
+                        <a class="text-white" href="produtos">Painéis Frontais</a>
                     </p>
                     <p>
-                        <a class="text-white " href="produtos.html ">Etiquetas</a>
+                        <a class="text-white" href="produtos">Etiquetas</a>
                     </p>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
-                    <a href="contato.html">
+                    <a href="https://wa.me/5511962584708" target="_blank">
                         <p class="text-white">
                             <i class="bi bi-whatsapp"> </i>&nbsp;<span> (11) 96258-4708</span>
                         </p>
                     </a>
-                    <a href="contato.html">
+                    <a href="mailto:dmdmembranas@gmail.com" target="_blank">
                         <p class="text-white w-100">
                             <i class="bi bi-envelope"> </i><span>&nbsp; dmdmembranas@gmail.com</span>
                         </p>
