--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 
 <head>
-    <!-- Sempre checar se está OK daqui para baixo 
-    <base href="https://dmdmembranas.com.br">-->
+    <!-- Sempre checar se está OK daqui para baixo -->
+    <base href="https://dmdmembranas.com.br">
     <!-- Title -->
     <title>DMD Teclados de Membrana, Painéis e Etiquetas em Policarbonato | DMD</title>
     <!-- Charset -->
@@ -39,7 +39,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
-    <link rel="manifest" href="assets/json/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     <!-- LINK ICONES -->
@@ -61,19 +60,19 @@
                 <div class="collapse navbar-collapse" id="navbarmenu">
                     <ul class="navbar-nav  ms-auto px-3">
                         <li class="nav-item mb-3">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="/">Home</a>
                         </li>
                         <li class="nav-item mb-3">
-                            <a class="nav-link " href="servicos.html">Serviços</a>
+                            <a class="nav-link " href="servicos">Serviços</a>
                         </li>
                         <li class="nav-item mb-3">
-                            <a class="nav-link " href="produtos.html">Produtos</a>
+                            <a class="nav-link " href="produtos">Produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sobre.html">Sobre</a>
+                            <a class="nav-link" href="sobre">Sobre</a>
                         </li>
                     </ul>
-                    <a class="btn-secondary-c" href="contato.html">Contato</a>
+                    <a class="btn-secondary-c" href="contato">Contato</a>
                 </div>
             </div>
         </nav>
@@ -85,8 +84,8 @@
             <div class="row">
                 <div class="col-lg-9  mx-auto text-center container-content">
                     <h1 class="display-4 text-white h1-top mt-5">Tudo o que você precisa em impressão Silk Screen</h1>
-                    <p class="text-white my-3 p-top" style="font-size: 16px;">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade. Desenvolvemos e fabicamos Teclados de membrana, Paineis forntais e Etiquetas técnicas</p>
-                    <a class="btn btn-secondary" href="servicos.html">Conheça os nossos serviços</a>
+                    <p class="text-white my-3 p-top" style="font-size: 16px;">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade. Desenvolvemos e fabricamos Teclados de membrana, Paineis frontais e Etiquetas técnicas</p>
+                    <a class="btn btn-secondary" href="servicos">Conheça os nossos serviços</a>
                 </div>
             </div>
         </div>
@@ -107,7 +106,7 @@
                             <div class="icon-box">
                                 <i class="bi bi-pencil-fill"></i>
                             </div>
-                            <p>Desenvolvemos o seu produto conforme a sua necessidades, respeitando o DNA da sua empresa.</p>
+                            <p>Desenvolvemos o seu produto conforme a sua necessidade, respeitando o DNA da sua empresa.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
@@ -172,7 +171,7 @@
                     <p class="text-white">Confira tudo o que podemos lhe oferecer!</p>
                 </div>
                 <div class="col-auto">
-                    <a href="servicos.html" class="btn btn-cta mt-4">Saiba Mais</a>
+                    <a href="servicos" class="btn btn-cta mt-4">Saiba Mais</a>
                 </div>
             </div>
         </div>
@@ -191,7 +190,7 @@
                         <div class="produtos">
                             <h3 class="display-6">Exelentes Produtos</h3>
                             <p>Fabricamos teclados de membrana, painéis frontais, etiquetas silk e digital nos mais diversos tipos de materiais.</p>
-                            <a class="btn btn-danger" href="produtos.html">Nossos produtos</a>
+                            <a class="btn btn-danger" href="produtos">Nossos produtos</a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 mt-4 container-carrosel">
@@ -249,8 +248,8 @@
         <div class="container text-center text-md-left">
             <div class="row text-center text-md-left ">
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-lg-5 mb-5 ">
-                    <a href="#">
-                        <img src="./assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
+                    <a href="/">
+                        <img src="./assets/img/logo-footer.png " alt="Logo DMD" style="width: 170px;">
                     </a>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
@@ -260,23 +259,23 @@
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger">Produtos</h5>
                     <p>
-                        <a class="text-white" href="produtos.html">Teclados de Membrana</a>
+                        <a class="text-white" href="produtos">Teclados de Membrana</a>
                     </p>
                     <p>
-                        <a class="text-white " href="produtos.html">Paineis Frontais</a>
+                        <a class="text-white " href="produtos">Painéis Frontais</a>
                     </p>
                     <p>
-                        <a class="text-white" href="produtos.html">Etiquetas</a>
+                        <a class="text-white" href="produtos">Etiquetas</a>
                     </p>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 text-start">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
-                    <a href="contato.html">
+                    <a href="https://wa.me/5511962584708" target="_blank">
                         <p class="text-white">
                             <i class="bi bi-whatsapp"> </i>&nbsp;<span> (11) 96258-4708</span>
                         </p>
                     </a>
-                    <a href="contato.html">
+                    <a href="mailto:dmdmembranas@gmail.com" target="_blank">
                         <p class="text-white w-100">
                             <i class="bi bi-envelope"> </i><span>&nbsp; dmdmembranas@gmail.com</span>
                         </p>
