--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -39,7 +39,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
-    <link rel="manifest" href="assets/json/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
     <!-- LINK ICONES -->
@@ -56,24 +55,24 @@
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="# "><img id="logo-person" src="./assets/img/logo.png " alt="Logo MDM "></a>
+                <a class="navbar-brand" href="./"><img id="logo-person" src="./assets/img/logo.png " alt="Logo MDM "></a>
                 <i class="bi bi-list navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarmenu"></i>
                 <div class="collapse navbar-collapse" id="navbarmenu">
                     <ul class="navbar-nav ms-auto px-3">
                         <li class="nav-item mb-3">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="./">Home</a>
                         </li>
                         <li class="nav-item mb-3">
-                            <a class="nav-link " href="servicos.html">Serviços</a>
+                            <a class="nav-link " href="servicos">Serviços</a>
                         </li>
                         <li class="nav-item mb-3">
-                            <a class="nav-link " href="produtos.html">Produtos</a>
+                            <a class="nav-link " href="produtos">Produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sobre.html">Sobre</a>
+                            <a class="nav-link" href="sobre">Sobre</a>
                         </li>
                     </ul>
-                    <a class="btn-secondary-c" href="contato.html">Contato</a>
+                    <a class="btn-secondary-c" href="contato">Contato</a>
                 </div>
             </div>
         </nav>
@@ -158,7 +157,7 @@
         <div class="container text-center text-md-left ">
             <div class="row text-center text-md-left ">
                 <div class="col-md-12 col-lg-3 col-xl-3 mx-auto mt-lg-5 mb-5 ">
-                    <a href="index.html">
+                    <a href="./">
                         <img src="./assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
                     </a>
                 </div>
@@ -169,23 +168,23 @@
                 <div class="col-md-12 col-lg-3 col-xl-3 mx-auto mt-3 text-start ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Produtos</h5>
                     <p>
-                        <a class="text-white " href="produtos.html ">Teclados de Membrana</a>
+                        <a class="text-white" href="produtos">Teclados de Membrana</a>
                     </p>
                     <p>
-                        <a class="text-white " href="produtos.html ">Paineis Frontais</a>
+                        <a class="text-white" href="produtos">Paineis Frontais</a>
                     </p>
                     <p>
-                        <a class="text-white " href="produtos.html ">Etiquetas</a>
+                        <a class="text-white" href="produtos">Etiquetas</a>
                     </p>
                 </div>
                 <div class="col-md-12 col-lg-3 col-xl-3 mx-auto mt-3 text-start ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
-                    <a href="contato.html ">
+                    <a href="https://wa.me/5511962584708" target="_blank">
                         <p class="text-white ">
                             <i class="bi bi-whatsapp "> </i>&nbsp;<span> (11) 96258-4708</span>
                         </p>
                     </a>
-                    <a href="contato.html ">
+                    <a href="mailto:dmdmembranas@gmail.com" target="_blank">
                         <p class="text-white w-100 ">
                             <i class="bi bi-envelope "> </i><span>&nbsp; dmdmembranas@gmail.com</span>
                         </p>
